Fix wrapping issue to center items

--- a/styles.css
+++ b/styles.css
@@ -150,8 +150,14 @@ span {
     display: flex;
     flex-direction: row;
 
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    /* gap: 20px 52px; */
+    /* gap: 5% 5%; */
+    gap: 2em 3em;
+    /* either gap works */
+    
 }
 
 .info {
@@ -163,6 +169,7 @@ span {
 
     justify-content: center;
     align-items: center;
+    
 
 }
 
